--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home | Duc Nguyen</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel='stylesheet'
@@ -32,10 +32,12 @@
                 <h1>I'M </h1>
                 <h1 id="landing_name"> DUC</h1>
                 <h3>SOFTWARE ENGINEER/ FRONT-END DEVELOPER</h3>
-                <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores aspernatur quibusdam
-                    accusantium animi sed, officiis molestias perferendis earum corporis quaerat harum dolores ea
-                    voluptatibus! Molestiae odit necessitatibus aut sint impedit!</h4>
-                <a href="#about_me">MORE ABOUT ME</a>
+                <h4>A final-semester student, with guiding and training experience, having interests in organizing and
+                    managing projects.</h4>
+                <a href="#about_me">
+                    MORE ABOUT ME 
+                    <i class="fi fi-ss-angle-circle-down"></i>
+                </a>
             </div>
         </div>
         <div id="landing_right">
@@ -52,10 +54,9 @@
                 <h2>Software Engineer/ Front-end Developer</h2>
             </div>
 
-            <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto dolores voluptates ad laudantium.
-                Sapiente, cumque? Nam aperiam incidunt facere dolorem ratione iste magni natus ut maiores iusto rerum
-                consequatur voluptate unde similique, nostrum mollitia alias saepe quam est, commodi tempora
-                necessitatibus eius! Laudantium exercitationem est fugiat nostrum? Dolorum, accusantium rem.</h4>
+            <h4> Led a team of four on a graduate capstone project by organizing tasks, evaluating team members, and
+                developing them, which helped
+                the delivery of all the assignments on time.</h4>
         </div>
         <div id="statistic">
             <div id="statistic_left">
