--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio | Duc Nguyen</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/portfolio.css">
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-straight/css/uicons-solid-straight.css'>
 </head>
@@ -26,17 +27,20 @@
     </div>
     <div id="portfolio">
         <div id="portfolio_left">
-            <div>
-                <img src="./assets/186536032_235317855025173_8041973802807288901_n.jpg" alt="">
+            <div id="avatar">
             </div>
-            <div>
+            <div id="nav">
                 <a href="./index.html">Home</a>
+                <a>|</a>
                 <a href="./resume.html">Resume</a>
-                <a href="./portfolio.html">Portfolio</a>
+                <a>|</a>
+                <a href="./portfolio.html" style="color: white;">Portfolio</a>
             </div>
         </div>
         <div id="portfolio_right">
-            <div id="title">PORTFOLIO</div>
+            <div id="title">
+                <h1>PORTFOLIO</h1>
+            </div>
             <div id=""></div>
         </div>
     </div>
