--- a/resume.html
+++ b/resume.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume | Duc Nguyen</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/resume.css">
     <link rel='stylesheet'
         href='https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-straight/css/uicons-solid-straight.css'>
 </head>
@@ -26,18 +27,60 @@
     </div>
     <div id="resume">
         <div id="resume_left">
-            <div>
-                <img src="./assets/186536032_235317855025173_8041973802807288901_n.jpg" alt="">
+            <div id="avatar">
             </div>
-            <div>
+            <div id="nav">
                 <a href="./index.html">Home</a>
-                <a href="./resume.html">Resume</a>
+                <a>|</a>
+                <a href="./resume.html" style="color: white;">Resume</a>
+                <a>|</a>
                 <a href="./portfolio.html">Portfolio</a>
             </div>
         </div>
         <div id="resume_right">
-            <div id="title">RESUME</div>
-            <div id=""></div>
+            <div id="title">
+                <h1>RESUME</h1>
+            </div>
+            <div id="education" class="section">
+                <h2>EDUCATION</h2>
+                <div id="education_card" class="section-card">
+                    <h4 class="sub-heading-left">FPT UNIVERSITY, Hochiminh City</h4>
+                    <h4 class="sub-heading-right">2018 - 2024</h4>
+                    <h3 class="heading">Bachelor of Software Engineering</h3>
+                    <div class="description">Expected graduation date: April 2024</div>
+                </div>
+            </div>
+            <div style="background-color: gray; height: 1px; width: 100%; margin: 0x auto;"></div>
+            <div id="projects" class="section">
+                <h2>PROJECTS</h2>
+                <div id="" class="section-card">
+                    <h4 class="sub-heading-left">Front-end Developer</h4>
+                    <h4 class="sub-heading-right">May, 2023 - Jul, 2023</h4>
+                    <h3 class="heading">ALS Vietnam</h3>
+                    <div class="description">
+                        <a>Description: This is a non-profit project, with the purpose of communicating about ALS
+                            disease.</a> <br />
+                        <a>Name of customer: Thao Nguyen - Founder</a> <br />
+                        <a>Team size: 4</a> <br />
+                        <a>Responsibility in project: Communicate and receive requests from customers. Maintain and
+                            update web application.</a> <br />
+                        <a href="https://alsvietnam.org/about-us">Click here to visit website</a>
+                    </div>
+                </div>
+                
+                <div id="" class="section-card">
+                    <h4 class="sub-heading-left">Leader - Front-end Developer</h4>
+                    <h4 class="sub-heading-right">Sep, 2023 - Jan, 2024
+                    </h4>
+                    <h3 class="heading">Tutor Center - Capstone Project</h3>
+                    <div class="description">
+                        <a>Team size: 4</a> <br />
+                        <a>Responsibility in project: Aid eliminate miscommunication, outlining tasks, schedules,
+                            timelines to accomplish project goals.</a> <br />
+                    </div>
+                </div>
+            </div>
+            <div id="experience" class="section"></div>
         </div>
     </div>
 </body>
