--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,12 @@
             <div id="title">
                 <h1>PORTFOLIO</h1>
             </div>
-            <div id=""></div>
+            <div id="image_container">
+                <div id="img_1"></div>
+                <div id="img_2"></div>
+                <div id="img_3"></div>
+                <div id="img_4"></div>
+            </div>
         </div>
     </div>
 </body>
